--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>The Movie Database</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1>The Movie Database</h1>
+
+    </header>
+    <main>
+        <form id="searchForm">
+            <input typ="text" id="search" name="search" placeholder="Search for movie">
+            <button type="submit">Search</button>
+
+        </form>
+
+        <div id="imgDiv"></div>
+        
+        <div id="movies"></div>
+    </main>
+    <footer>
+        <p>&copy; Created by Neil </p>
+
+    </footer>
     <script src="index.js" defer></script>
 </body>
+
 </html>
